apps/staging/kube-prometheus-stack/ingress-patch.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-prometheus
  namespace: metrics
spec:
  routes:
    - match: Host(`grafana.staging.localhost`)
      kind: Rule
      middlewares:
      services:
        - name: kube-prometheus-stack-grafana
          port: 80
          scheme: http
    - match: Host(`prometheus.staging.localhost`)
      kind: Rule
      middlewares:
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
          scheme: http
